full calculator functionality with floating point

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
         <button id = "7" class = "numpad" value="7" onclick="input(this)">7</button>
         <button id = "8" class = "numpad" value="8" onclick="input(this)">8</button>
         <button id = "9" class = "numpad" value="9" onclick="input(this)">9</button>
+        <button id = "." class = "numpad" value = "." onclick="input(this)">.</button>
     </div>
     <div class="operations">
-        <button onclick = "additionStorage(storeValue())">+</button>
-        <button onclick="subtractionStorage(storeValue())">-</button>
-        <button onclick="multiplicationStorage(storeValue())">(×)</button>
-        <button onclick="divisionStorage(storeValue())">÷</button>
+        <button onclick = "additionStorage()">+</button>
+        <button onclick="subtractionStorage()">-</button>
+        <button onclick="multiplicationStorage()">(×)</button>
+        <button onclick="divisionStorage()">÷</button>
         <button onclick = "operate()">=</button>
 
     </div>
