fixed file links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator
     </title>
     <link rel="stylesheet" href="style.css">
-    <script src="/calculator.js" defer></script>
+    <script src="calculator.js" defer></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         </div>
         <div class='numpadBackground'>
             <div class='texasRow'>
-                <img src="/assets/texas_beige-removebg-preview.png" alt="Texas" style="width:50px; padding: 0px; margin: 0px;" ;>
+                <img src="assets/texas_beige-removebg-preview.png" alt="Texas" style="width:50px; padding: 0px; margin: 0px;" ;>
                 <p style="color: #c7b175;">Datamath II
                 <p>
             </div>
