--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Calculator
     </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image" href="assets/favicon/favicon.ico">
     <script src="calculator.js" defer></script>
 </head>
 
